--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Word Scramble Game </title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/words.js" defer></script>
+    <script src="words.js" defer></script>
     <script src="js/script.js" defer></script>
   </head>
   <body>
